security issues fixed